# scrabble_junior_game

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  ReadMe.txt  Word.cpp  Word.h
BoardBuilder/: BoardBuilder.cpp  BoardBuilder.h  build_board.cpp
Game/: game.cpp
ScrabbleJunior/: Board.cpp  Board.h  Game.cpp  Game.h  Player.cpp  Player.h  Pool.cpp  Pool.h  ScrabbleJunior.cpp  ScrabbleJunior.h  scrabble_junior.cpp  struct.h
ScrabbleJunior/DATA/: TEST_BOARD.txt
